# synapse

./: .gitignore  README.md  README.swarm.md
synapse/: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  README.md  bench_vs_llamacpp.sh  benchmark_results_20260323.md  synapse.h
synapse/.cargo/: config.toml
synapse/.github/workflows/: docs.yml
synapse/benchmarks/: lewm_profile.rs  lewm_quant_bench.rs  lewm_speed_of_light.py  model_benchmark.rs
synapse/configs/: code_wm_contrast_high.json  code_wm_expa.json  code_wm_g10.json  code_wm_wm_pred_fix_e07.json  gemma_2b.json  llama3.2_1b.json  mistral_7b.json  phi3_mini.json  qwen3_0.6b.json  unixcoder_base.json
synapse/crates/synapse-autograd/: Cargo.toml
synapse/crates/synapse-autograd/src/: backward.rs  function.rs  grad_check.rs  graph.rs  lib.rs  no_grad.rs  tensor.rs  variable.rs
synapse/crates/synapse-autograd/tests/: autograd_correctness.rs
synapse/crates/synapse-code-tokenizer/: Cargo.toml
synapse/crates/synapse-code-tokenizer/src/: lib.rs
synapse/crates/synapse-core/: Cargo.toml
synapse/crates/synapse-data/: Cargo.toml
synapse/crates/synapse-graph/: Cargo.toml
synapse/crates/synapse-inference/: Cargo.toml  build.rs
synapse/crates/synapse-nn/: Cargo.toml
synapse/crates/synapse-optim/: Cargo.toml
synapse/crates/synapse-sys/: Cargo.toml  build.rs
synapse/crates/synapse-train/: Cargo.toml
synapse/docs/: ESP32_P4_PIE_ACCELERATOR.md  HANDOVER_SLIM_EXPERIMENTS.md  OPTIMIZATION_JOURNEY.md  book.toml
synapse/docs/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-7fa3a753.js  toc-3f7a8b41.js  toc.html
synapse/docs/src/: SUMMARY.md  index.md
synapse/examples/: bench_code_wm.rs  bench_int8_vs_f32.rs  bench_lewm_quantized.rs  cifar10.rs  clip_similarity.rs  code_wm_calibration_compare.rs  code_wm_corpus_retrieve.rs  code_wm_demo.rs  code_wm_edit_pairs.rs  code_wm_fused_bench.rs  code_wm_int8_compare.rs  code_wm_metal_bench.rs  code_wm_pipeline.rs  code_wm_q4_compare.rs  code_wm_quant_corpus.rs  code_wm_retrieve.rs  code_wm_semantic_test.rs  export_browser_corpus.rs  export_lewm_q4.rs  export_mamba_int8.rs  geometric_attention_demo.rs  jepa_embed.rs  lewm_compare_variants.rs  lewm_compress.rs  lewm_demo.rs  lewm_slim_vs_baseline.rs  mamba_generate.rs  mnist.rs  model_benchmark.rs  model_surgeon.rs  qwen3_chat.rs  rwkv_logit_probe.rs  text_classification.rs  tokenizer_cross_check.rs  vision_transformer.rs  vit_classify.rs  world_model_rollout.rs  xor.rs
synapse/fpga/: README.md  requirements.txt  run_lewm_sim.py  shift_add_proof.py
synapse/fpga/amaranth/: adaln_layer.py  gen_from_lq40.py  nonlinear.py  q4_shift_add_mac.py  testbench.py
synapse/fpga/docs/: hardwired_lewm.md
synapse/fpga/sim/: golden_vectors.py  run_sim.py
synapse/scripts/: _shared.py  ast_tokenizer_fnv.py  bench_suite.sh  benchmark_matrix.py  build_commitpack_index.py  build_file_index.py  convert_code_wm_ckpt.py  convert_lewm_ckpt.py  debug_rwkv_baseline.py  download_weights.sh  export_unixcoder_reference.py  lfm25_baseline_comparison.py  lfm25_generate.py  sync_public_status.py  tokenize_code_dir.py  tokenize_edit_pairs.py  tokenize_refactor_pairs.py  tokenize_snippets.py  verify_logits.py
synapse/scripts/reference/: code_wm_pytorch_baseline.py  convert_rwkv_checkpoint.py  generate_mamba_reference.py  generate_reference.py  generate_rwkv_reference.py  inspect_checkpoint.py  lewm_pytorch_baseline.py  requirements.txt
synapse/src/: lib.rs
synapse/status/: benchmark_matrix.json  benchmark_matrix.md  code_wm_new_models_bench.md  public_status.json
synapse/synapse-esp32/: Cargo.toml  ESP32_P4_STATUS.md  build.rs  sdkconfig.defaults
synapse/synapse-esp32/.cargo/: config.toml
synapse/synapse-esp32/esp-idf-app/: .gitignore  CMakeLists.txt  README.md  sdkconfig.bad_regen_backup  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.h2_spi_backup  sdkconfig.pre_wifi_remote_kconfig_fix
synapse/synapse-esp32/examples/: lewm_encode_probe.rs  lewm_golden.rs  lewm_probe.rs  lewm_rollout_bench.rs
synapse/synapse-esp32/src/: lib.rs  main.rs  model.rs  server.rs
synapse/synapse-wasm/: Cargo.toml
synapse/synapse-wasm/src/: lib.rs
synapse/tests/benchmarks/: attention_bench.rs  inference_throughput.rs  kvcache_speedup.rs  matmul_bench.rs  memory_bench.rs  memory_usage.rs  prefill_throughput.rs  quantization_speedup.rs  simd_vs_naive.rs  training_throughput.rs  transformer_throughput.rs
synapse/tests/fixtures/: code_corpus_filenames.json  edit_pairs_meta.json  file_index_meta.json  mamba_130m_reference.json  refactor_pairs_meta.json  snippets_meta.json
synapse/tests/integration/: attention_correctness.rs  code_wm_golden.rs  config_driven_assembly.rs  diffusion_validation.rs  graph_optimization.rs  hybrid_validation.rs  inference_e2e.rs  kvcache_correctness.rs  kvcache_decode.rs  mamba_hf_validation.rs  mamba_validation.rs  mnist_e2e.rs  multi_model_validation.rs  quantization_accuracy.rs  reference_correctness.rs  rwkv_hf_validation.rs  rwkv_validation.rs  transformer_e2e.rs  transformer_graph_opt.rs
synapse/web/: extract_demos.py  index.html  pusht_server.py
synapse/web/code_wm_demo/: README.md  corpus.json  index.html
synapse/web/lewm-compress-demo/: index.html
synapse/web/ssm-demo/: config.json  index.html  serve.sh
synapse/web/unixcoder-delta/: README.md  index.html  roberta_bpe.js  worker.js
synapse/zig/: build.zig  build.zig.zon
synapse/zig/src/: root.zig
synapse/zig/tests/: bench_alloc.zig  bench_attention.zig  bench_conv.zig  bench_fused_lewm.zig  bench_kvcache.zig  bench_layernorm.zig  bench_matmul.zig  bench_qmatmul.zig  bench_reduce.zig  bench_rmsnorm.zig  bench_silu.zig  bench_simd.zig  test_alloc.zig  test_attention.zig  test_batchnorm.zig  test_conv.zig  test_elementwise.zig  test_ffi.zig  test_fused_lewm.zig  test_kvcache.zig  test_layernorm.zig  test_matmul.zig  test_pool.zig  test_qmatmul.zig  test_quantize.zig  test_reduce.zig  test_rmsnorm.zig  test_rope.zig  test_silu.zig  test_simd.zig  test_softmax.zig  test_tensor.zig
(+466 files in other folders)
