[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "synapse"
version = "0.1.0"
edition = "2021"

[dependencies]
synapse-autograd = { path = "crates/synapse-autograd" }
synapse-nn = { path = "crates/synapse-nn" }
synapse-optim = { path = "crates/synapse-optim" }
synapse-data = { path = "crates/synapse-data" }
synapse-graph = { path = "crates/synapse-graph" }
synapse-train = { path = "crates/synapse-train" }
synapse-core = { path = "crates/synapse-core" }
synapse-inference = { path = "crates/synapse-inference" }
rand = "0.8"
rand_distr = "0.4"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "cifar10"
path = "examples/cifar10.rs"

[[example]]
name = "text_classification"
path = "examples/text_classification.rs"

[[example]]
name = "vision_transformer"
path = "examples/vision_transformer.rs"

[[test]]
name = "graph_optimization"
path = "tests/integration/graph_optimization.rs"

[[test]]
name = "mnist_e2e"
path = "tests/integration/mnist_e2e.rs"

[[test]]
name = "training_throughput"
path = "tests/benchmarks/training_throughput.rs"

[[test]]
name = "memory_bench"
path = "tests/benchmarks/memory_bench.rs"

[[test]]
name = "matmul_bench"
path = "tests/benchmarks/matmul_bench.rs"

[[test]]
name = "transformer_e2e"
path = "tests/integration/transformer_e2e.rs"

[[test]]
name = "attention_correctness"
path = "tests/integration/attention_correctness.rs"

[[test]]
name = "transformer_graph_opt"
path = "tests/integration/transformer_graph_opt.rs"

[[test]]
name = "attention_bench"
path = "tests/benchmarks/attention_bench.rs"

[[test]]
name = "transformer_throughput"
path = "tests/benchmarks/transformer_throughput.rs"

[[test]]
name = "inference_e2e"
path = "tests/integration/inference_e2e.rs"

[[test]]
name = "quantization_accuracy"
path = "tests/integration/quantization_accuracy.rs"

[[test]]
name = "kvcache_correctness"
path = "tests/integration/kvcache_correctness.rs"

[[test]]
name = "config_driven_assembly"
path = "tests/integration/config_driven_assembly.rs"

[[test]]
name = "prefill_throughput"
path = "tests/benchmarks/prefill_throughput.rs"

[[test]]
name = "inference_throughput"
path = "tests/benchmarks/inference_throughput.rs"

[[test]]
name = "quantization_speedup"
path = "tests/benchmarks/quantization_speedup.rs"

[[test]]
name = "memory_usage"
path = "tests/benchmarks/memory_usage.rs"

[[example]]
name = "qwen3_chat"
path = "examples/qwen3_chat.rs"

[[example]]
name = "model_benchmark"
path = "examples/model_benchmark.rs"
