[workspace]
members = ["crates/*", "synapse-wasm", "synapse-esp32"]
resolver = "2"

[package]
name = "synapse"
version = "0.1.0"
edition = "2021"
description = "A modular LLM inference engine with Zig SIMD kernels and Metal GPU acceleration"
license = "MIT"
keywords = ["llm", "inference", "wasm", "quantization", "edge-ai"]
categories = ["science", "wasm"]
repository = "https://github.com/eren23/synapse"

[features]
metal = ["synapse-inference/metal"]

[dependencies]
synapse-autograd = { path = "crates/synapse-autograd" }
synapse-nn = { path = "crates/synapse-nn" }
synapse-optim = { path = "crates/synapse-optim" }
synapse-data = { path = "crates/synapse-data" }
synapse-graph = { path = "crates/synapse-graph" }
synapse-train = { path = "crates/synapse-train" }
synapse-core = { path = "crates/synapse-core" }
synapse-inference = { path = "crates/synapse-inference", features = ["diffusion"] }
synapse-sys = { path = "crates/synapse-sys" }
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
serde_json = "1"

[[example]]
name = "xor"
path = "examples/xor.rs"

[[example]]
name = "mnist"
path = "examples/mnist.rs"

[[example]]
name = "cifar10"
path = "examples/cifar10.rs"

[[example]]
name = "text_classification"
path = "examples/text_classification.rs"

[[example]]
name = "vision_transformer"
path = "examples/vision_transformer.rs"

[[test]]
name = "graph_optimization"
path = "tests/integration/graph_optimization.rs"

[[test]]
name = "mnist_e2e"
path = "tests/integration/mnist_e2e.rs"

[[test]]
name = "training_throughput"
path = "tests/benchmarks/training_throughput.rs"

[[test]]
name = "memory_bench"
path = "tests/benchmarks/memory_bench.rs"

[[test]]
name = "matmul_bench"
path = "tests/benchmarks/matmul_bench.rs"

[[test]]
name = "transformer_e2e"
path = "tests/integration/transformer_e2e.rs"

[[test]]
name = "attention_correctness"
path = "tests/integration/attention_correctness.rs"

[[test]]
name = "transformer_graph_opt"
path = "tests/integration/transformer_graph_opt.rs"

[[test]]
name = "attention_bench"
path = "tests/benchmarks/attention_bench.rs"

[[test]]
name = "transformer_throughput"
path = "tests/benchmarks/transformer_throughput.rs"

[[test]]
name = "inference_e2e"
path = "tests/integration/inference_e2e.rs"

[[test]]
name = "quantization_accuracy"
path = "tests/integration/quantization_accuracy.rs"

[[test]]
name = "kvcache_correctness"
path = "tests/integration/kvcache_correctness.rs"

[[test]]
name = "config_driven_assembly"
path = "tests/integration/config_driven_assembly.rs"

[[test]]
name = "prefill_throughput"
path = "tests/benchmarks/prefill_throughput.rs"

[[test]]
name = "inference_throughput"
path = "tests/benchmarks/inference_throughput.rs"

[[test]]
name = "quantization_speedup"
path = "tests/benchmarks/quantization_speedup.rs"

[[test]]
name = "memory_usage"
path = "tests/benchmarks/memory_usage.rs"

[[test]]
name = "simd_vs_naive"
path = "tests/benchmarks/simd_vs_naive.rs"

[[test]]
name = "kvcache_decode"
path = "tests/integration/kvcache_decode.rs"

[[test]]
name = "multi_model_validation"
path = "tests/integration/multi_model_validation.rs"

[[test]]
name = "kvcache_speedup"
path = "tests/benchmarks/kvcache_speedup.rs"

[[test]]
name = "mamba_validation"
path = "tests/integration/mamba_validation.rs"

[[test]]
name = "rwkv_validation"
path = "tests/integration/rwkv_validation.rs"

[[test]]
name = "hybrid_validation"
path = "tests/integration/hybrid_validation.rs"

[[test]]
name = "diffusion_validation"
path = "tests/integration/diffusion_validation.rs"

[[test]]
name = "reference_correctness"
path = "tests/integration/reference_correctness.rs"

[[test]]
name = "mamba_hf_validation"
path = "tests/integration/mamba_hf_validation.rs"

[[test]]
name = "rwkv_hf_validation"
path = "tests/integration/rwkv_hf_validation.rs"

[[example]]
name = "export_mamba_int8"
path = "examples/export_mamba_int8.rs"

[[example]]
name = "lewm_compress"
path = "examples/lewm_compress.rs"

[[example]]
name = "model_surgeon"
path = "examples/model_surgeon.rs"

[[example]]
name = "mamba_generate"
path = "examples/mamba_generate.rs"

[[example]]
name = "qwen3_chat"
path = "examples/qwen3_chat.rs"

[[example]]
name = "vit_classify"
path = "examples/vit_classify.rs"

[[example]]
name = "clip_similarity"
path = "examples/clip_similarity.rs"

[[example]]
name = "jepa_embed"
path = "examples/jepa_embed.rs"

[[example]]
name = "world_model_rollout"
path = "examples/world_model_rollout.rs"

[[example]]
name = "lewm_demo"
path = "examples/lewm_demo.rs"

[[example]]
name = "geometric_attention_demo"
path = "examples/geometric_attention_demo.rs"

[[example]]
name = "export_lewm_q4"
path = "examples/export_lewm_q4.rs"
