[package]
name = "synapse-esp32"
version = "0.1.0"
edition = "2021"

# ESP32-P4 is RISC-V, uses ESP-IDF framework
# Build with: cargo build --target riscv32imc-esp-espidf --release
# Requires: espup install, . $HOME/export-esp.sh

[dependencies]
# ESP-IDF framework bindings
# esp-idf-hal = "0.44"
# esp-idf-svc = "0.49"
# esp-idf-sys = { version = "0.35", features = ["binstart"] }

# For now, use pure-Rust synapse-inference for host testing
synapse-inference = { path = "../crates/synapse-inference", default-features = false, features = ["pure-rust"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[features]
default = ["host-test"]
host-test = []  # Build for host (Mac/Linux) for testing without ESP32 hardware
esp32 = []      # Build for actual ESP32-P4 target (uncomment esp-idf deps above)

[profile.release]
opt-level = "z"     # Smallest binary
lto = true
codegen-units = 1
