[package]
name = "synapse-wasm"
version = "0.1.0"
edition = "2021"
description = "Synapse inference engine compiled to WebAssembly — run world models in the browser"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synapse-inference = { path = "../crates/synapse-inference", default-features = false, features = ["pure-rust"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
