[package]
name = "synapse-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synapse-core = { path = "../synapse-core" }
synapse-sys = { path = "../synapse-sys" }
memmap2 = "0.9"
rand = "0.8"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
