[package]
name = "synapse-inference"
version = "0.1.0"
edition = "2021"

[features]
metal = ["dep:metal"]
diffusion = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synapse-core = { path = "../synapse-core" }
synapse-sys = { path = "../synapse-sys" }
memmap2 = "0.9"
minijinja = "2"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
