[package]
name = "synapse-inference"
version = "0.1.0"
edition = "2021"

[features]
default = ["zig-ffi"]
zig-ffi = ["dep:synapse-core", "dep:synapse-sys"]
pure-rust = []
metal = ["dep:metal", "zig-ffi"]
diffusion = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synapse-core = { path = "../synapse-core", optional = true }
synapse-sys = { path = "../synapse-sys", optional = true }
rand = "0.8"

# These don't compile on ESP-IDF (no mmap, no jinja templates needed)
[target.'cfg(not(target_os = "espidf"))'.dependencies]
memmap2 = "0.9"
minijinja = "2"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
